# P04_Standard_Pipeline

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  app.py  demo-data.bat  install.bat  package-lock.json  package.json  requirements.txt  start.bat  stop.bat  test_structural_report_parsed.json
apps/backend/: .env.example  Dockerfile  Dockerfile.prod  pyproject.toml
apps/backend/src/: __init__.py  config.py  main.py
apps/backend/src/api/v1/: router.py
apps/backend/src/api/v1/endpoints/: auth.py  enrichment.py  files.py  outputs.py  pipeline.py  projects.py  query.py  validation.py
apps/backend/src/api/v1/schemas/: __init__.py  enrichment.py  outputs.py  pipeline.py  project.py  validation.py
apps/backend/src/api/websocket/: events.py  manager.py
apps/backend/src/core/: security.py
apps/backend/src/db/: __init__.py  session.py
apps/backend/src/models/: __init__.py  document.py  element.py  output.py  pipeline.py  project.py  user.py
apps/backend/src/pipeline/ai_outputs/: __init__.py  embedding_generator.py  gnn_generator.py  knowledge_graph.py  tabular_generator.py
apps/backend/src/pipeline/stages/parse/: __init__.py  base.py  docx_parser.py  hwpx_parser.py  ifc_parser.py  pdf_parser.py  pptx_parser.py  xlsx_parser.py
apps/backend/src/pipeline/standards/: __init__.py  bcf_handler.py  bsdd_client.py  ids_validator.py  loin_processor.py
apps/backend/src/services/: document_service.py  pipeline_service.py
apps/backend/src/workers/: celery_app.py
apps/backend/src/workers/tasks/: pipeline_tasks.py
data/: loin_requirements.json
(+92 files in other folders)
